--- a/FEM_2D.ipynb
+++ b/FEM_2D.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "### Resolución\n",
     "\n",
-    "Primero utilizando el paquete de $\\texttt{DelunayTriangulation}$ se implementó una función que dada una cantidad $N$ de subdivisiones del intervalo [0,1] retorna: la matriz de vértices, $\\texttt{nodes\\_ mesh}$; la matriz de elementos, $\\texttt{triangles\\_ mesh}$ "
+    "Primero utilizando el paquete de $\\texttt{DelunayTriangulation}$ se implementó una función que dada una cantidad $N$ de subdivisiones del intervalo [0,1] retorna: la matriz de vértices, $\\texttt{nodes_mesh}$; la matriz de elementos, $\\texttt{triangles_mesh}$ "
    ]
   },
   {
